--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0",
     "nodemailer-smtp-transport": "^2.7.4"
   }
