--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VenbrinoDev",
+  "name": "venbrinodev",
   "version": "1.0.0",
   "description": "Single page website for venbrino dev agency",
   "main": "index.js",
@@ -7,7 +7,8 @@
   "author": "Kingsley <divine10646@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon ."
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "dependencies": {
     "dotenv": "^16.0.3",
@@ -15,5 +16,8 @@
     "mongoose": "^6.7.2",
     "nodemailer": "^6.8.0",
     "nodemailer-smtp-transport": "^2.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
